<resources>
    <string name="app_name">GithubUser</string>
    <string name="app_title">Github Users</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="avatar">Avatar</string>
    <string name="bio">Bio</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="blog">Blog</string>
    <string name="empty_attribute">-</string>
    <string name="location">Location</string>
    <string name="repository">Public repositories</string>
    <string name="repository_value">200</string>
    <string name="followers">Followers</string>
    <string name="followers_value">1k</string>
    <string name="following">Following</string>
    <string name="following_value">1k</string>
    <string name="twitter">Twitter</string>
    <string name="dot">•</string>
    <string name="github">Github</string>
    <string name="search">Search</string>
    <string name="search_hint">Search on Github</string>
    <string name="illustration">Illustration</string>
    <string name="not_found">Not found</string>
    <string name="not_found_txt">\"%1$s\" not found.\nPlease try another keyword</string>
    <string name="empty">It looks like you haven\'t seen anyone yet</string>
    <string name="empty_favorite">You don\'t have any favorite user yet</string>
    <string name="nothing">Nothing to show</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="network_error">Can\'t display %1$s.\nPlease check your internet connection.</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="bookmark">Bookmark</string>
</resources>